# nalswiss

./: .gitignore  README.md  pyproject.toml
scripts/: release.sh
src/nalswiss/: dirproc.py  gdrive.py  tree.py
