[tool.poetry]
name = "nalswiss"
version = "0.1.0"
description = "Portable CLI tools: tree, gdrive-dl, dirproc"
authors = ["rexologue"]
readme = "README.md"
packages = [{ include = "nalswiss", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gdown = "^5"
chardet = "^5"


[tool.poetry.scripts]
treex = "nalswiss.tree:cli"
gdrive-dl = "nalswiss.gdrive:cli"
dirproc = "nalswiss.dirproc:cli"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"